Revert "調整怡安整理的細節:卡片padding  標題字距padding 增加得獎頁頁碼"
This reverts commit 4433f7e9c694233a9af51f6b002ddf33c3ed0ac1.

--- a/src/happiness-job.html
+++ b/src/happiness-job.html
@@ -9,46 +9,43 @@
 </head>
 <body>
     <header></header>
-    <swiper></swiper>
     <div class="happiness-wrapper">
-        <section class="happinessJob-wrapper">
-            <div class="happinessJob">
-                <div class="title">
-                    <h2>幸福職涯</h2>
-                    <div class="search classBtn">
-                        <input type="text" placeholder="輸入公司/品牌或職務關鍵字">
-                        <button class="search-submit-btn btn">搜尋</button>
-                    </div>
+        <swiper></swiper>
+        <section class="happinessJob">
+            <div class="title">
+                <h2>幸福職涯</h2>
+                <div class="search classBtn">
+                    <input type="text" placeholder="輸入公司/品牌或職務關鍵字">
+                    <button class="search-submit-btn btn">搜尋</button>
                 </div>
-                <div class="linkTab">
-                    <a href="happiness-company.html">嚴選企業</a>
-                    <a href="happiness-job.html" class="tabFocus">推薦職缺</a>
-                </div>
-                <div class="company-select">
-                    <button class="advanced">進階搜尋</button>
-                    <div class="select-flex form-select">
-                        <select name="area">
-                            <option value="選地區">選地區</option>
-                            <option value="選地區">選地區</option>
-                            <option value="選地區">選地區</option>
-                        </select>
-                        <select name="industry">
-                            <option value="選產業">選產業</option>
-                            <option value="選產業">選產業</option>
-                            <option value="選產業">選產業</option>
-                        </select>
-                        <select name="welfare">
-                            <option value="選福利">選福利</option>
-                            <option value="選福利">選福利</option>
-                            <option value="選福利">選福利</option>
-                        </select>
-                    </div>
-                </div>
-                <card-job-tag></card-job-tag>
-                <pgnb-second class="pagination pgnb-style2"></pgnb-second>
             </div>
+            <div class="linkTab">
+                <a href="happiness-company.html">嚴選企業</a>
+                <a href="happiness-job.html" class="tabFocus">推薦職缺</a>
+            </div>
+            <div class="company-select">
+                <button class="advanced">進階搜尋</button>
+                <div class="select-flex form-select">
+                    <select name="area">
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                    </select>
+                    <select name="industry">
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                    </select>
+                    <select name="welfare">
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                    </select>
+                </div>
+            </div>
+            <card-job-tag></card-job-tag>
+            <pgnb-second class="pagination pgnb-style2"></pgnb-second>
         </section>
-
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
                 <img src="assets/img/ad-ex.png" alt="">
