--- a/src/lottery.html
+++ b/src/lottery.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2023幸福企業票選抽獎得主</title>
+    <title>幸福企業票選募集中</title>
 </head>
 
 <body>
@@ -154,76 +154,7 @@
                 <div class="section-lottery">
                     <div class="lottery-item">
                         <div class="item-img">
-                            <img src="assets/img/lottery-user.svg" alt="">
-                            <p>新北市</p>
-                        </div>
-                        <div class="item-content">
-                            <div class="content-name">
-                                <div class="date">
-                                    <p>2023/01/13</p>
-                                </div>
-                                <div class="name">
-                                    <h5>張○翔</h5>
-                                    <p>0987-＊＊＊-987
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="content-lottery">
-                                <p>
-                                    恭賀喜獲<span>10000</span>元
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="lottery-item">
-                        <div class="item-img">
                             <img src="assets/img/archive-ex-img.png" alt="">
-                            <p>新北市</p>
-                        </div>
-                        <div class="item-content">
-                            <div class="content-name">
-                                <div class="date">
-                                    <p>2023/01/13</p>
-                                </div>
-                                <div class="name">
-                                    <h5>張○翔</h5>
-                                    <p>0987-＊＊＊-987
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="content-lottery">
-                                <p>
-                                    恭賀喜獲<span>10000</span>元
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="lottery-item">
-                        <div class="item-img">
-                            <img src="assets/img/archive-ex-img.png" alt="">
-                            <p>新北市</p>
-                        </div>
-                        <div class="item-content">
-                            <div class="content-name">
-                                <div class="date">
-                                    <p>2023/01/13</p>
-                                </div>
-                                <div class="name">
-                                    <h5>張○翔</h5>
-                                    <p>0987-＊＊＊-987
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="content-lottery">
-                                <p>
-                                    恭賀喜獲<span>10000</span>元
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="lottery-item">
-                        <div class="item-img">
-                            <img src="assets/img/lottery-user.svg" alt="">
                             <p>新北市</p>
                         </div>
                         <div class="item-content">
@@ -315,7 +246,30 @@
                     </div>
                     <div class="lottery-item">
                         <div class="item-img">
-                            <img src="assets/img/lottery-user.svg" alt="">
+                            <img src="assets/img/archive-ex-img.png" alt="">
+                            <p>新北市</p>
+                        </div>
+                        <div class="item-content">
+                            <div class="content-name">
+                                <div class="date">
+                                    <p>2023/01/13</p>
+                                </div>
+                                <div class="name">
+                                    <h5>張○翔</h5>
+                                    <p>0987-＊＊＊-987
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="content-lottery">
+                                <p>
+                                    恭賀喜獲<span>10000</span>元
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lottery-item">
+                        <div class="item-img">
+                            <img src="assets/img/archive-ex-img.png" alt="">
                             <p>新北市</p>
                         </div>
                         <div class="item-content">
@@ -384,7 +338,7 @@
                     </div>
                     <div class="lottery-item">
                         <div class="item-img">
-                            <img src="assets/img/lottery-user.svg" alt="">
+                            <img src="assets/img/archive-ex-img.png" alt="">
                             <p>新北市</p>
                         </div>
                         <div class="item-content">
@@ -407,7 +361,53 @@
                     </div>
                     <div class="lottery-item">
                         <div class="item-img">
-                            <img src="assets/img/lottery-user.svg" alt="">
+                            <img src="assets/img/archive-ex-img.png" alt="">
+                            <p>新北市</p>
+                        </div>
+                        <div class="item-content">
+                            <div class="content-name">
+                                <div class="date">
+                                    <p>2023/01/13</p>
+                                </div>
+                                <div class="name">
+                                    <h5>張○翔</h5>
+                                    <p>0987-＊＊＊-987
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="content-lottery">
+                                <p>
+                                    恭賀喜獲<span>10000</span>元
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lottery-item">
+                        <div class="item-img">
+                            <img src="assets/img/archive-ex-img.png" alt="">
+                            <p>新北市</p>
+                        </div>
+                        <div class="item-content">
+                            <div class="content-name">
+                                <div class="date">
+                                    <p>2023/01/13</p>
+                                </div>
+                                <div class="name">
+                                    <h5>張○翔</h5>
+                                    <p>0987-＊＊＊-987
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="content-lottery">
+                                <p>
+                                    恭賀喜獲<span>10000</span>元
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lottery-item">
+                        <div class="item-img">
+                            <img src="assets/img/archive-ex-img.png" alt="">
                             <p>新北市</p>
                         </div>
                         <div class="item-content">
@@ -429,27 +429,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="pagination">
-                    <span class="btn-prev pgnb-btn">
-                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1.54033 13.1484L11.4398 22.8095C12.0256 23.3812 12.9754 23.3812 13.5611 22.8095C14.1469 22.2378 14.1469 21.3109 13.5611 20.7393L3.66165 11.0782C3.07587 10.5065 2.12612 10.5065 1.54033 11.0782C0.954547 11.6499 0.954547 12.5768 1.54033 13.1484Z" fill="white"/>
-                            <path d="M3.66167 13.1484L13.5612 3.48738C14.147 2.91571 14.147 1.98883 13.5612 1.41716C12.9754 0.845481 12.0256 0.845481 11.4398 1.41716L1.54035 11.0782C0.954565 11.6499 0.954565 12.5768 1.54035 13.1484C2.12614 13.7201 3.07589 13.7201 3.66167 13.1484Z" fill="white"/>
-                            </svg>
-                    </span>
-                    <ul class="pagination-ul">
-                        <li><a class="page-number pgnb-current p1" href="#">1</a></li>
-                        <li><a class="page-number p1" href="#">2</a></li>
-                        <li><a class="page-number p1" href="#">3</a></li>
-                        <li><a class="page-number p1" href="#">4</a></li>
-                    </ul>
-                    <span class="btn-next pgnb-btn">
-                        <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M23.4597 11.0789L13.5602 1.4178C12.9744 0.846126 12.0246 0.846126 11.4389 1.4178C10.8531 1.98948 10.8531 2.91635 11.4389 3.48803L21.3383 13.1491C21.9241 13.7208 22.8739 13.7208 23.4597 13.1491C24.0455 12.5774 24.0455 11.6505 23.4597 11.0789Z" fill="white"/>
-                            <path d="M21.3383 11.0789L11.4388 20.7399C10.853 21.3116 10.853 22.2385 11.4388 22.8101C12.0246 23.3818 12.9744 23.3818 13.5602 22.8101L23.4596 13.1491C24.0454 12.5774 24.0454 11.6505 23.4596 11.0789C22.8739 10.5072 21.9241 10.5072 21.3383 11.0789Z" fill="white"/>
-                            </svg>
-                            
-                    </span>
-                </div> 
             </div>
             <div class="row info">
                 <div class="container">
@@ -460,9 +439,7 @@
                         <li class="p1">得獎公告後,請於得獎日2週內至回傳請領資料,若逾期視同放棄領獎資格。(提醒您得獎不另行通知)<br>
                         系統中上傳請領資料,若預期視同放棄領獎資格,若無收到確認信,請主動來信詢問。</li>
                         <li class="p1">請提供至少一張本人清晰可辨識的正方形尺寸生活照(使用於得獎名單的生活照)</li>
-                        <li class="p1">機會中獎暨勞務報酬單 <button class="btn"> <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="none">
-                            <path d="M11.0854 4.61883C15.1279 4.61883 18.4187 7.90966 18.4187 11.9522C18.4187 15.9947 15.1279 19.2855 11.0854 19.2855C7.04287 19.2855 3.75203 15.9947 3.75203 11.9522C3.75203 7.90966 7.04287 4.61883 11.0854 4.61883ZM11.0854 2.78549C6.02537 2.78549 1.9187 6.89216 1.9187 11.9522C1.9187 17.0122 6.02537 21.1188 11.0854 21.1188C16.1454 21.1188 20.252 17.0122 20.252 11.9522C20.252 6.89216 16.1454 2.78549 11.0854 2.78549ZM12.002 11.9522V8.28549H10.1687V11.9522H7.4187L11.0854 15.6188L14.752 11.9522H12.002Z" fill="white"/>
-                            </svg> 點我下載
+                        <li class="p1">機會中獎暨勞務報酬單 <button class="btn"> <img src="assets/img/download-icon.svg" alt=""> 點我下載
                         </button> </li>
                         <li class="p1">身分證正反面照片</li>
                         <li class="p1">存摺封面照片</li>
