--- a/pro/happiness-job.html
+++ b/pro/happiness-job.html
@@ -219,7 +219,8 @@
     </div>
 </div>
 </header>
-    <swiper><!-- 10 Banner -->
+    <div class="happiness-wrapper">
+        <swiper><!-- 10 Banner -->
 
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
@@ -254,41 +255,39 @@
     </div>
     <div class="swiper-pagination"></div>
 </div></swiper>
-    <div class="happiness-wrapper">
-        <section class="happinessJob-wrapper">
-            <div class="happinessJob">
-                <div class="title">
-                    <h2>幸福職涯</h2>
-                    <div class="search classBtn">
-                        <input type="text" placeholder="輸入公司/品牌或職務關鍵字">
-                        <button class="search-submit-btn btn">搜尋</button>
-                    </div>
+        <section class="happinessJob">
+            <div class="title">
+                <h2>幸福職涯</h2>
+                <div class="search classBtn">
+                    <input type="text" placeholder="輸入公司/品牌或職務關鍵字">
+                    <button class="search-submit-btn btn">搜尋</button>
                 </div>
-                <div class="linkTab">
-                    <a href="happiness-company.html">嚴選企業</a>
-                    <a href="happiness-job.html" class="tabFocus">推薦職缺</a>
+            </div>
+            <div class="linkTab">
+                <a href="happiness-company.html">嚴選企業</a>
+                <a href="happiness-job.html" class="tabFocus">推薦職缺</a>
+            </div>
+            <div class="company-select">
+                <button class="advanced">進階搜尋</button>
+                <div class="select-flex form-select">
+                    <select name="area">
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                        <option value="選地區">選地區</option>
+                    </select>
+                    <select name="industry">
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                        <option value="選產業">選產業</option>
+                    </select>
+                    <select name="welfare">
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                        <option value="選福利">選福利</option>
+                    </select>
                 </div>
-                <div class="company-select">
-                    <button class="advanced">進階搜尋</button>
-                    <div class="select-flex form-select">
-                        <select name="area">
-                            <option value="選地區">選地區</option>
-                            <option value="選地區">選地區</option>
-                            <option value="選地區">選地區</option>
-                        </select>
-                        <select name="industry">
-                            <option value="選產業">選產業</option>
-                            <option value="選產業">選產業</option>
-                            <option value="選產業">選產業</option>
-                        </select>
-                        <select name="welfare">
-                            <option value="選福利">選福利</option>
-                            <option value="選福利">選福利</option>
-                            <option value="選福利">選福利</option>
-                        </select>
-                    </div>
-                </div>
-                <card-job-tag><!-- 07 職涯無照片tag區塊 -->
+            </div>
+            <card-job-tag><!-- 07 職涯無照片tag區塊 -->
 
 <div class="jobTag-section">
     <div class="card-jobTag">
@@ -523,7 +522,7 @@
 
 
 </card-job-tag>
-                <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
+            <pgnb-second class="pagination pgnb-style2"><div class="g-pagination">
     <!-- 上一頁在有前一頁時才會顯現 -->
     <a href="" class="previous tag">上一頁
         <span>
@@ -548,9 +547,7 @@
         </span>
     </a>
 </div></pgnb-second>
-            </div>
         </section>
-
         <div class="ad-area-wrapper">
             <div class="ad-area-container">
                 <img src="assets/img/ad-ex.png" alt="">
