--- a/pro/searchResult-company.html
+++ b/pro/searchResult-company.html
@@ -233,207 +233,207 @@
 <div class="companyTag-section">
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
     <div class="card-jobTag">
         <a href="company-story.html">
-            <img src="assets/img/job-card-cover.png" alt="">
-            <div class="content-section">
-                <div class="card-content">
-                    <div class="job-title">
-                        <i class="fa-solid fa-heart"></i>
-                        <p>隆通工程有限公司</p>
-                    </div>
-                    <div class="job-content">
-                        <ul>
-                            <li>
-                                <img src="assets/img/job-card-icon01.png" alt="">
-                                <p>台北市南港區</p>
-                            </li>
-                            <li>
-                                <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="job-tag"> 
-                        <p class="tag">友善環境</p>
-                        <p class="tag">幸福企業</p>
-                        <p class="tag">幸福企業讚讚</p>
-                    </div>
+            <img src="assets/img/job-card-cover.png" alt="">        
+        </a>
+        <div class="content-section">
+            <div class="card-content">
+                <a href="" class="job-title">
+                    <i class="fa-solid fa-heart"></i>
+                    <p>隆通工程有限公司</p>
+                </a>
+                <div class="job-content">
+                    <ul>
+                        <a href="#">
+                            <img src="assets/img/job-card-icon01.png" alt="">
+                            <p>台北市南港區</p>
+                        </a>
+                        <li>
+                            <p class="p2">簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述簡述</p>
+                        </li>
+                    </ul>
                 </div>
-                <div class="card-btn">
-                    <button class="btn">
-                        共有10筆職缺
-                    </button>
+                <div class="job-tag"> 
+                    <a href="" class="tag">友善環境</a>
+                    <a href="" class="tag">幸福企業</a>
+                    <a href="" class="tag">幸福企業讚讚</a>
                 </div>
             </div>
-        </a>
+            <div class="card-btn">
+                <a href="company-job.html" class="btn">
+                    共有10筆職缺
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
