--- a/pro/vote.html
+++ b/pro/vote.html
@@ -355,7 +355,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -365,7 +365,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -375,7 +375,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -385,7 +385,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -395,7 +395,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -405,7 +405,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -415,7 +415,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -425,7 +425,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -1173,7 +1173,7 @@
                     </div>
                     <div class="bottom">
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1181,7 +1181,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1189,7 +1189,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1197,7 +1197,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1205,7 +1205,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1213,7 +1213,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1221,7 +1221,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1229,7 +1229,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
