--- a/src/vote.html
+++ b/src/vote.html
@@ -145,7 +145,7 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -155,7 +155,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -165,7 +165,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -205,7 +205,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="swiper-slide">
                             <div class="brand-item">
-                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                                <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                                 <div class="brand-info">
                                     <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                     <p class="p1 b-category">半導體製造</p>
@@ -963,7 +963,7 @@
                     </div>
                     <div class="bottom">
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -971,7 +971,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -979,7 +979,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -987,7 +987,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -995,7 +995,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1003,7 +1003,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1011,7 +1011,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
@@ -1019,7 +1019,7 @@
                             </div>
                         </div>
                         <div class="brand-item">
-                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt=""></div>
+                            <div class="brand-cover"><img src="assets/img/job-card-cover.png" alt="" class="brand-cover-img"></div>
                             <div class="brand-info">
                                 <img src="assets/img/brand-ex.png" alt="" class="brand-logo">
                                 <p class="p1 b-category">半導體製造</p>
